--- a/frontend/daofe/package.json
+++ b/frontend/daofe/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "yarn build:packages && vite --force --host",
+    "dev": "vite --force --host",
     "build": "yarn build:packages &&  tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
